minor update 9/3/2026 -Fix some hardcode strings -Fix Egg Count Logic -Fix and modified schedule ui